--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+  <script src="https://kit.fontawesome.com/a27d0e0237.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
